# pcli2

./: .dockerignore  .gitattributes  .gitignore  .qwen  CHANGELOG.md  Cargo.toml  Dockerfile  HOMEBREW_QUICKSTART.md  HOMEBREW_TAP_SETUP.md  README.md  RELEASE_NOTES_v1.0.0.md  SLACK_ANNOUNCEMENT_v1.0.0.md  SLACK_ANNOUNCEMENT_v1.1.0.md  SLACK_ANNOUNCEMENT_v1.1.10.md  SLACK_ANNOUNCEMENT_v1.1.11.md  SLACK_ANNOUNCEMENT_v1.1.3.md  SLACK_ANNOUNCEMENT_v1.1.4.md  SLACK_ANNOUNCEMENT_v1.1.6.md  SLACK_ANNOUNCEMENT_v1.1.9.md  SLACK_ANNOUNCEMENT_v1.3.0.md  dist-workspace.toml  download_asset_updated.txt  extract_function.txt  folder_deps_fn.rs  folder_deps_func.rs  oranda.json  pcli2  pcli2.config.yml  sample_metadata.csv  test_geometric_search.sh  test_geometric_search_request.sh  test_help_output.sh  test_metadata.csv  test_metadata_update.sh  test_minimal.csv  test_normalize  test_wsl_install.sh  update_metadata.sh  upload_function.txt  upload_function_body.txt  (+1 more)
.chglog/: config.yml
.github/ISSUE_TEMPLATE/: epic.md  performance_optimization.md
.github/homebrew/: README.md  pcli2.rb
.github/workflows/: documentation.yml  release.yml  rust.yml  update-latest-tag.yml
.helix/: ignore
benches/: benchmarks.rs
coverage/: lcov.info  tarpaulin-report.html
data/: test.stl
docs/: README.md  geometric-matching.md  installation.md  quickstart.md  timestamp.txt
docs/book/: 404.html  cross_platform.html  documentation_deployment.html  geometric-matching.html  index.html  installation.html  metadata-inference.html  metadata-operations.html  print.html  quickstart.html  searchindex.js  searchindex.json
docs/src/: README.md  SUMMARY.md  cross_platform.md  documentation_deployment.md  geometric-matching.md  installation.md  metadata-inference.md  metadata-operations.md  quickstart.md  scripting.md
public/: artifacts.json  changelog.rss  index.html  pcli2-installer.ps1.txt  pcli2-installer.sh.txt
public/artifacts/: index.html
public/book/: 404.html  cross_platform.html  documentation_deployment.html  geometric-matching.html  index.html  installation.html  metadata-inference.html  print.html  quickstart.html  searchindex.js  searchindex.json
public/changelog/: index.html
public/changelog/v0.1.0/: index.html
public/changelog/v0.1.1/: index.html
public/changelog/v0.1.2/: index.html
public/changelog/v0.1.3/: index.html
public/changelog/v0.1.6/: index.html
public/changelog/v0.1.7/: index.html
public/changelog/v0.1.8/: index.html
src/: api.rs  api_key.rs  asset_cache.rs  auth.rs  banner.rs  browser.rs  cache.rs  cli.rs  cli.rs.bak  client.rs  commands.rs  configuration.rs  context.rs  dependency_diff.rs  dev_keyring.rs  error.rs  error_utils.rs  exit_codes.rs  folder_cache.rs  folder_cache_simple_test.rs  folder_cache_test.rs  folder_cache_tests.rs  folder_hierarchy.rs  folder_path_cache.rs  format.rs  format_test.rs  format_utils.rs  http_utils.rs  keyring.rs  lib.rs  main.rs  metadata.rs  metadata_cache.rs  metadata_cache.rs.bak  model.rs  model.rs.bak  param_utils.rs  path_utils.rs  physna_v3.rs  physna_v3.rs.bak  (+6 more)
src/actions/: assets.rs  cache.rs  completions.rs  folders.rs  folders_upload.rs  man.rs  mod.rs  tenants.rs  users.rs  utils.rs
src/commands/: asset.rs  assets.rs  auth.rs  cache.rs  completions.rs  config.rs  context.rs  environment.rs  folder.rs  man.rs  metadata.rs  mod.rs  params.rs  tenant.rs  user.rs
test/: pcli2.conf.yml
tests/: README.md  actions_tests.rs  asset_tests.rs  cli_help_snapshot_test.rs  cli_help_test.rs  error_tests.rs  folder_list_test.rs  folder_resolution_test.rs  format_model_tests.rs  metadata_fields_pagination_test.rs
wix/: main.wxs
(+30 files in other folders)
