[package]
name = "pcli2"
version = "0.1.0"
edition = "2021"
authors = ["Julian Chultarsky <jchultarsky@physna.com>"]
description = "CLI client utility to the Physna public API"

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
clap = { version = "4.3.23", features = ["derive"] }
dirs = "5.0.0"
exitcode = "1.1.2"
thiserror = "1.0.47"
serde_yaml = "0.9.25"
serde = { version = "1.0.185", features = ["derive"] }
tempfile = "3.8.0"
url = { version = "2.4.0", features = ["serde"] }
oauth2 = "4.3.0"
anyhow = "1.0.75"
reqwest = { version = "0.11.18", features = ["cookie_store", "cookies", "json", "serde_json", "multipart"] }
serde_urlencoded = "0.7.1"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
serde_json = "1.0.105"
csv = "1.2.2"
jws = "0.2.8"
keyring = "2.0.5"
jsonwebtoken = "8.3.0"
base64 = "0.21.2"
mime = "0.3.17"
tokio = { version = "1.34.0", features = ["full"] }
cacache = { version = "12.0.0" }
bincode = "1.3.3"
