[package]
name = "pcli2"
version = "0.1.0"
edition = "2021"
authors = ["Julian Chultarsky <jchultarsky@physna.com>"]
description = "CLI client utility to the Physna public API"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
exitcode = "1.1.2"
thiserror = "1.0.61"
serde_yaml = "0.9.34"
serde = { version = "1.0.203", features = ["derive"] }
tempfile = "3.10.1"
url = { version = "2.5.0", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json", "multipart"] }
serde_urlencoded = "0.7.1"
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
serde_json = "1.0.117"
jws = "0.2.9"
keyring = "2.3.3"
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
mime = "0.3.17"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
csv = "1.3.0"
