[package]
name = "pcli2"
version = "0.2.1"
edition = "2021"
authors = ["Julian Chultarsky <jchultarsky@physna.com>"]
description = "CLI client for the Physna public API - Advanced 3D Geometry Search and Analysis"
repository = "https://github.com/jchultarsky101/pcli2"

[package.metadata.wix]
upgrade-guid = "1A4B1568-B3A4-4FF3-8F28-7794C0181133"
path-guid = "A39581CB-4F22-4BBD-8FA8-4B99D16D6788"
license = false
eula = false

[features]
default = ["dev-keyring"]
dev-keyring = []

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.45", features = ["derive"] }
color-print = "0.3.4"
dirs = "5.0.1"
exitcode = "1.1.2"
thiserror = "1.0.69"
serde_yaml = "0.9.34"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.10.1"
url = { version = "2.5.0", features = ["serde"] }
urlencoding = "2.1.0"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
serde_urlencoded = "0.7.1"
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
serde_json = "1.0.143"
keyring = { version = "2.3.3", optional = true }
base64 = "0.22.1"
mime = "0.3.17"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
csv = "1.3.0"
inquire = "0.7.5"
ptree = "0.4.0"
glob = "0.3"
indicatif = "0.17"
futures = "0.3"
zip = "2.1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
keyring = { version = "2.3.3", optional = false }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

